docs: make AWS workshop diagrams reader-first
Refresh the AWS module READMEs around the two local-first S3 paths, replace Graphviz-era assets with inspected SVG/PNG diagrams, and keep the supporting scripts aligned with the new README image contract.

Constraint: README diagrams must live under docs/images/readme-diagrams, use shared icons, avoid Graphviz, and be visually inspected before commit.

Rejected: Keeping the old Graphviz outputs | they were script artifacts and no longer matched the source-backed README contract.

Confidence: high

Scope-risk: moderate

Directive: Keep sequence diagrams behavior-focused; do not add log-only participants or icons without rechecking label/card overlap.

Tested: Rendered AWS SVGs with CairoSVG; visually inspected individual PNGs and contact sheet; xmllint for 4 SVGs; README image link scan; Graphviz remnant scan; git diff --check.

Not-tested: Gradle module tests were not run because this is documentation and diagram-only work.