@@ -1,53 +1,54 @@
-# AWS Demo
+# AWS Workshop
 
 [한국어](README.ko.md) | English
 
-## Example Scenario
+The AWS workshop contains two local-first S3 examples. Use `s3-spring-cloud/` when you want to see
+Spring Cloud AWS and `S3Template` in a small runnable sample. Use `storage-abstraction/` when you
+want a service boundary that can switch between local files, S3, and pre-signed S3 URLs through
+Spring profiles.
 
-This example exercises **AWS Demo** as a runnable AWS integration workshop slice. It focuses on the path a developer would inspect first: configure the module, run the sample or tests, and observe the library or framework APIs that remove repetitive infrastructure code.
+## Architecture
 
-## Architecture Diagram
+![AWS Workshop architecture diagram](../docs/images/readme-diagrams/aws-readme-architecture-01.png)
 
-![AWS Demo Graphviz architecture diagram](../docs/images/readme-diagrams/aws-readme-architecture-01.png)
+Both modules run against local AWS-compatible infrastructure in tests and samples, so you can inspect
+the S3 behavior without real AWS credentials.
 
-The module is organized around the sample entry point or test fixture, the bluetape4k extension layer, and the runtime dependency used by the example. Keep the package under `io.bluetape4k.workshop.aws` as the source of truth when comparing this README with the code.
+## Module Guide
 
-## Sequence Diagram
+| module | Gradle task path | use it for |
+| --- | --- | --- |
+| `s3-spring-cloud/` | `:aws-s3-spring-cloud` | Spring Cloud AWS `S3Template`, AWS SDK v2 `S3Client`, bucket creation, object upload, object listing, and `ResourceLoader` access. |
+| `storage-abstraction/` | `:aws-storage-abstraction` | `StorageService` with `local`, `s3`, and `s3-presigned` profiles, coroutine-friendly blocking I/O boundaries, and pre-signed URL behavior. |
 
-![AWS Demo sequence diagram](../docs/images/readme-diagrams/aws-s3-spring-cloud-sequence-01.png)
+## Runtime Model
 
-Provides an example using AWS Java SDK V2 and [Spring Cloud AWS](https://github.com/awspring/spring-cloud-aws)).
+| concern | implementation |
+| --- | --- |
+| AWS endpoint | Local AWS-compatible emulator from `bluetape4k-testcontainers`, started by the sample or tests. |
+| Credentials | Static local credentials from the emulator; real AWS credentials are not required for local verification. |
+| S3 client | AWS SDK v2 `S3Client`; blocking calls are wrapped in `Dispatchers.IO` in the storage abstraction module. |
+| Spring integration | Spring Cloud AWS `S3Template` and `ResourceLoader` in `s3-spring-cloud/`; Spring profiles in `storage-abstraction/`. |
 
-## Module structure
+## Run
 
-| module | directory | explanation |
-|------|----------|------|
-| S3 Spring Cloud | `s3-spring-cloud/` | Spring Cloud AWS + AWS SDK v2-based S3 bucket creation/file upload/download example |
+```bash
+./gradlew :aws-s3-spring-cloud:test
+./gradlew :aws-storage-abstraction:test
+```
+
+Run the profile-driven storage sample directly when you want to compare backends:
+
+```bash
+./gradlew :aws-storage-abstraction:bootRun --args='--spring.profiles.active=local'
+./gradlew :aws-storage-abstraction:bootRun --args='--spring.profiles.active=s3'
+./gradlew :aws-storage-abstraction:bootRun --args='--spring.profiles.active=s3-presigned'
+```
 
 ## Prerequisites
 
-| item | explanation |
-|------|------|
-| Docker | The Docker daemon must be running because Testcontainers automatically starts LocalStack containers. |
-| AWS Credentials | Local testing uses the LocalStack emulator, so no actual AWS credentials are required |
-| Java 25 | Use `--enable-preview` flag, requires Java 25 or higher |
-| Kotlin 2.x | Includes multi-platform compatible Kotlin coroutine-based code |
-
-## Core library
-
-| library | Version/Role |
-|-----------|----------|
-| `software.amazon.awssdk:s3` | AWS SDK v2 — S3 Low-Level API |
-| `io.awspring.cloud:spring-cloud-aws-starter-s3` | Spring Cloud AWS — `S3Template` High-level abstraction |
-| `io.bluetape4k:bluetape4k-testcontainers` | `LocalStackServer` — LocalStack wrapper based on Testcontainers |
-| `io.bluetape4k:bluetape4k-aws` | bluetape4k AWS extension functions such as `staticCredentialsProviderOf`, `createBucket`, etc. |
-
-## Build and Test
-
-```bash
-# AWS
-./gradlew :aws:s3-spring-cloud:build
-
-# AWS
-./gradlew :aws:s3-spring-cloud:test
-```
+| item | requirement |
+| --- | --- |
+| JDK | Java 21 or newer. |
+| Docker | Required for emulator-backed tests and S3 samples. |
+| AWS account | Not required for the local workshop path. |
